# src/TemplateV4.Angular/src/app/api/models/user-dto.ts
@@ -9,5 +9,6 @@ export interface UserDto {
   id: string;
   roles: Array<string>;
   status?: string;
+  username?: string;
   version: string;
 }
